docs/3.0.x/install-next.mdx
---
id: install-next
title: Install in Next.js project
---

import { TileLink } from "../../src/components";

  <DocTabs
  defaultValue='new'
  values={[
  { label: 'New Project', value: 'new' },
  { label: 'Existing Project', value: 'existing' }
  ]}>

  <DocTabItem value="new" mb='4'>
 <Box mt='3' />

#### Create a new project using Next.js CLI with NativeBase template

<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  fontWeight="medium"
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere dolore rem iure corrupti vel ab, repellendus temporibus cumque similique ducimus eaque dolor, sequi itaque vitae sed aliquam vero mollitia optio!
</Text>
<br/>
<Box>
<Box 
 _dark={{ bg: "#171E2E" }}
_light={{ bg: "coolGray.50" }}
rounded='lg' 
py="3"
px="4"
pb='4'
rounded="md"
mb='8'
>
<Text bold mb="2" fontSize="md" >
  Using yarn
</Text>
<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere dolore rem iure corrupti vel ab, repellendus temporibus cumque similique ducimus eaque dolor, sequi itaque vitae sed aliquam vero mollitia optio!
</Text>
<br />
<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  fontWeight="bold"
>
  Plain Javascript
</Text>

```bash
  yarn create next-app -e https://github.com/GeekyAnts/nativebase-templates/tree/master/nextjs-with-native-base
```

<Text fontSize="sm" lineHeight="sm">
  Yey! you are all set, start editing src/pages/index.js now.
</Text>
<br />
<Text
  mt="0.5"
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  fontWeight="bold"
>
  With Typescript
</Text>

```bash
  yarn create next-app -e https://github.com/GeekyAnts/nativebase-templates/tree/master/nextjs-with-native-base-typescript
```

<Text fontSize="sm" lineHeight="sm">
  Yey! you are all set, start editing src/pages/index.tsx now.
</Text>
</Box>

<br />
<Box 
 _dark={{ bg: "#171E2E" }}
_light={{ bg: "coolGray.50" }}
rounded='lg' 
py="3"
px="4"
rounded="md"
mb='8'
> 
<Text bold mb="2" fontSize="md" >
  Using npx
</Text>
<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800"}}
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere dolore rem iure corrupti vel ab, repellendus temporibus cumque similique ducimus eaque dolor, sequi itaque vitae sed aliquam vero mollitia optio!
</Text>
<br />
<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  fontWeight="bold"
  fontSize='sm'
>
  Plain Javascript
</Text>

```bash
  npx create-next-app -example https://github.com/GeekyAnts/nativebase-templates/tree/master/nextjs-with-native-base
```

<Text fontSize="sm" lineHeight="sm">
  Yey! you are all set, start editing src/pages/index.js now.
</Text>
<br />

<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  fontWeight="bold"
  mt="0.5"
>
  With Typescript
</Text>

```bash
  npx create-next-app -example https://github.com/GeekyAnts/nativebase-templates/tree/master/nextjs-with-native-base-typescript
```

<Text fontSize="sm" lineHeight="sm">
  Yey! you are all set, start editing src/pages/index.tsx now.
</Text>
</Box>
</Box>



  </DocTabItem>
<DocTabItem value="existing">




<Box mt='3' />
<h4>Create a new project using Next.js CLI with NativeBase template</h4>
<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  fontWeight="medium"
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere dolore rem iure corrupti vel ab, repellendus temporibus cumque similique ducimus eaque dolor, sequi itaque vitae sed aliquam vero mollitia optio!
</Text>
<br/>
<Box 
 _dark={{ bg: "#171E2E" }}
_light={{ bg: "coolGray.50" }}
rounded='lg' 
py="3"
px="4"
pb='4'
rounded="md"
mb='8'
>
<Text bold mb="2" fontSize="md" >
  Using yarn
</Text>
<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere dolore rem iure corrupti vel ab, repellendus temporibus cumque similique ducimus eaque dolor, sequi itaque vitae sed aliquam vero mollitia optio!
</Text>
<br />

```bash
yarn add react-native-web@0.17.1 native-base react-native-svg@12.1.1 styled-components styled-system react-native-safe-area-context@3.3.2
```

</Box>

<Box 
 _dark={{ bg: "#171E2E" }}
_light={{ bg: "coolGray.50" }}
rounded='lg' 
py="3"
px="4"
pb='4'
rounded="md"
mb='8'
>
<Text bold mb="2" fontSize="md" >
  Using npm
</Text>
<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere dolore rem iure corrupti vel ab, repellendus temporibus cumque similique ducimus eaque dolor, sequi itaque vitae sed aliquam vero mollitia optio!
</Text>
<br />

```bash
npm install react-native-web@0.17.1 native-base react-native-svg@12.1.1 styled-components styled-system react-native-safe-area-context@3.3.2
```

</Box>

<Text
  bold mb="2" fontSize="md"
 >
  We'll need 2 more additional steps.
</Text>

- <Text 
_dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  fontWeight="medium"
  fontSize='sm'
>Install dev dependencies.</Text>

<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  mb='4'
>
  Inside your Next.js project, run:
</Text>

<Box 
 _dark={{ bg: "#171E2E" }}
_light={{ bg: "coolGray.50" }}
rounded='lg' 
py="3"
px="4"
pb='4'
rounded="md"
mb='8'
>
<Text bold mb="2" fontSize="md" >
  Using yarn
</Text>
<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere dolore rem iure corrupti vel ab, repellendus temporibus cumque similique ducimus eaque dolor, sequi itaque vitae sed aliquam vero mollitia optio!
</Text>
<br />

```bash
   yarn add next-compose-plugins next-transpile-modules -D
```

</Box>

<Box
 _dark={{ bg: "#171E2E" }}
_light={{ bg: "coolGray.50" }}
rounded='lg' 
py="3"
px="4"
pb='4'
rounded="md"
mb='8'
>
<Text bold mb="2" fontSize="md" >
  Using npm
</Text>
<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere dolore rem iure corrupti vel ab, repellendus temporibus cumque similique ducimus eaque dolor, sequi itaque vitae sed aliquam vero mollitia optio!
</Text>
<br />

```bash
 npm i next-compose-plugins next-transpile-modules --save-dev
```

</Box>

- <Text 
_dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  fontWeight="medium"
  fontSize='sm'
>Update your next.config.js with the below content.</Text>


```js
const withPlugins = require("next-compose-plugins");
const withTM = require("next-transpile-modules")([
  "native-base",
  "react-native-svg",
  "styled-components",
  "react-native-safe-area-context",
  "@react-aria/visually-hidden",
  "@react-native-aria/button",
  "@react-native-aria/checkbox",
  "@react-native-aria/combobox",
  "@react-native-aria/focus",
  "@react-native-aria/interactions",
  "@react-native-aria/listbox",
  "@react-native-aria/overlays",
  "@react-native-aria/radio",
  "@react-native-aria/slider",
  "@react-native-aria/tabs",
  "@react-native-aria/utils",
  "@react-stately/combobox",
  "@react-stately/radio",
]);

module.exports = withPlugins(
  [
    withTM,
    // your plugins go here.
  ],
  {
    webpack: (config) => {
      config.resolve.alias = {
        ...(config.resolve.alias || {}),
        // Transform all direct `react-native` imports to `react-native-web`
        "react-native$": "react-native-web",
      };
      config.resolve.extensions = [
        ".web.js",
        ".web.ts",
        ".web.tsx",
        ...config.resolve.extensions,
      ];
      return config;
    },
  }
);
```

#### Run the Hello world example

Replace the below code in your pages/\_app.js

```jsx
import "../styles/globals.css";
import { NativeBaseProvider } from "native-base";

function MyApp({ Component, pageProps }) {
  return (
    <NativeBaseProvider>
      <Component {...pageProps} />
    </NativeBaseProvider>
  );
}

export default MyApp;
```

and put this in your pages/index.js

```jsx
import React from "react";
import { Box } from "native-base";

export default function App() {
  return <Box>Hello world</Box>;
}
```

  </DocTabItem>
  </DocTabs>


<Box>
  <Box mt="4" mb="8">
    <HStack pl="0" ml="0" space="4">
      <TileLink
        title="Customize NativeBaseProvider"
        url="setup-provider"
        description="NativeBaseProvider provides theme throughout your application"
        className="bg-blueGray-600 mt-2"
      />
      <TileLink
        title="Theme"
        url="default-theme"
        description="Read more about the default NativeBase theme and how to override it"
        className="bg-blueGray-600  mt-2"
      />
    </HStack>
    <Box mt="4" pl="0" ml="0">
      <TileLink
        title="Utility props"
        url="utility-props"
        description="Shorthands of commonly used styling props which maps with the provided theme"
        className="bg-blueGray-600"
      />
    </Box>
  </Box>
</Box>
